--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.4",
-    "framer-motion": "^12.29.3",
+    "emoji-picker-react": "^4.18.0",
+    "framer-motion": "^12.34.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
@@ -17,6 +18,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
