--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.2.1",
+    "socket.io": "^4.8.3"
   }
 }
